--- a/yadfs.cbp
+++ b/yadfs.cbp
@@ -13,7 +13,16 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add option="-std=c++11" />
+					<Add option="-Iinclude" />
+					<Add option="-Iinclude/ipc" />
 				</Compiler>
+				<Linker>
+					<Add option="-lpthread" />
+					<Add option="-llog4cpp" />
+					<Add option="-lboost_system" />
+					<Add option="-lboost_thread" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/yadfs" prefix_auto="1" extension_auto="1" />
@@ -32,7 +41,55 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="include/BlockQueue.h" />
+		<Unit filename="include/ClientProtocol.h" />
+		<Unit filename="include/DFSClient.h" />
+		<Unit filename="include/DataNodeProtocol.h" />
+		<Unit filename="include/IntWritable.h" />
+		<Unit filename="include/Log.h" />
+		<Unit filename="include/MethodWritable.h" />
+		<Unit filename="include/NameNode.h" />
+		<Unit filename="include/Permission.h" />
+		<Unit filename="include/StringWritable.h" />
+		<Unit filename="include/Test1.h" />
+		<Unit filename="include/Test2.h" />
+		<Unit filename="include/Utils.h" />
+		<Unit filename="include/Writable.h" />
+		<Unit filename="include/ipc/Call.h" />
+		<Unit filename="include/ipc/Client.h" />
+		<Unit filename="include/ipc/Connection.h" />
+		<Unit filename="include/ipc/Handler.h" />
+		<Unit filename="include/ipc/Invocation.h" />
+		<Unit filename="include/ipc/Listener.h" />
+		<Unit filename="include/ipc/Method.h" />
+		<Unit filename="include/ipc/RPC.h" />
+		<Unit filename="include/ipc/Responder.h" />
+		<Unit filename="include/ipc/Server.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="src/BlockQueue.cpp" />
+		<Unit filename="src/ClientProtocol.cpp" />
+		<Unit filename="src/DFSClient.cpp" />
+		<Unit filename="src/DataNodeProtocol.cpp" />
+		<Unit filename="src/IntWritable.cpp" />
+		<Unit filename="src/Log.cpp" />
+		<Unit filename="src/MethodWritable.cpp" />
+		<Unit filename="src/NameNode.cpp" />
+		<Unit filename="src/Permission.cpp" />
+		<Unit filename="src/StringWritable.cpp" />
+		<Unit filename="src/Test1.cpp" />
+		<Unit filename="src/Test2.cpp" />
+		<Unit filename="src/Utils.cpp" />
+		<Unit filename="src/Writable.cpp" />
+		<Unit filename="src/ipc/Call.cpp" />
+		<Unit filename="src/ipc/Client.cpp" />
+		<Unit filename="src/ipc/Connection.cpp" />
+		<Unit filename="src/ipc/Handler.cpp" />
+		<Unit filename="src/ipc/Invocation.cpp" />
+		<Unit filename="src/ipc/Listener.cpp" />
+		<Unit filename="src/ipc/Method.cpp" />
+		<Unit filename="src/ipc/RPC.cpp" />
+		<Unit filename="src/ipc/Responder.cpp" />
+		<Unit filename="src/ipc/Server.cpp" />
 		<Extensions>
 			<code_completion />
 			<debugger />
